----------------------------------------------------------------------
 OmegaT x.x.x Changes
----------------------------------------------------------------------

1.8.0 vs. 1.7.3


  12 Enhancements
   1 Bugfixe

----------------------------------------------------------------------
1.8.0

  Implemented requests:
  
  - Editor window name
  http://sourceforge.net/support/tracker.php?aid=1764103

  - Tool: Spellchecker
  http://sourceforge.net/support/tracker.php?aid=991510 

  - Letter case change in editing field 
  http://sourceforge.net/support/tracker.php?aid=1386063  

  - Display source segments 
  http://sourceforge.net/support/tracker.php?aid=1805172   

  - Mark translated segments 
  http://sourceforge.net/support/tracker.php?aid=1805173 

  - Mark untranslated segments   
  http://sourceforge.net/support/tracker.php?aid=1809004

  - Navigation history  
  http://sourceforge.net/support/tracker.php?aid=1805175     

  - HTML, skip extraction of messages matching regxep
  http://sourceforge.net/support/tracker.php?aid=1787085     

  - (X)HTML filter: do not translate input VALUE attribute
  http://sourceforge.net/support/tracker.php?aid=1787153     

  - Select elements to translate in office documents
  http://sourceforge.net/support/tracker.php?aid=1812565   

  - Clickable match window
  http://sourceforge.net/support/tracker.php?aid=1297188


  Other enhancements:
  - Belarusian UI updated to 1.7.+

  Bug fixes:
  
  - HTML filter loses html-encoded characters if not supported
  http://sourceforge.net/support/tracker.php?aid=1802000

----------------------------------------------------------------------
 OmegaT 1.7.3 update 1 Changes
----------------------------------------------------------------------

1.7.3 update 1 vs. 1.7.3


  4 Enhancements
  5 Bugfixes

----------------------------------------------------------------------
1.7.3 update 1

  Enhancements:

  - Exceptions for EN.*: Fig., St., middle name.