@@ -5,7 +5,8 @@
 #
 # Copyright (C) 2000-2006 Keith Godfrey, Maxym Mykhalchuk, and Henry Pijffers
 #               2007 Didier Briel, Zoltan Bartko, Martin Fleurke
-#               Home page: http://www.omegat.org/omegat/omegat.html
+#               2008 Andrzej Sawula
+#               Home page: http://www.omegat.org/
 #               Support center: http://groups.yahoo.com/group/OmegaT/
 #
 # This program is free software; you can redistribute it and/or modify
@@ -32,6 +33,7 @@
 #  @author Jean-Christophe Helary
 #  @author Zoltan Bartko - bartkozoltan@bartkozoltan.com
 #  @author Martin Fleurke
+#  @author Andrzej Sawula
 #
 #  @version 1.8.0
 #
@@ -254,7 +256,15 @@ MW_STATUS_SAVING=Saving project...
 
 MW_STATUS_SAVED=Project saved
 
+MW_SEGMENT_LENGTH_DEFAULT=\ --/-- 
 MW_QUIT_CONFIRM=Do you really want to quit?
+MW_SEGMENT_LENGTH_TOOLTIP=Source/translation lengths (characters)
+
+MW_PROGRESS_DEFAULT=\ --/-- (--/--, --) 
+
+MW_PROGRESS_TOOLTIP=File: number of segments / translated \
+(project: unique / unique translated, total number of segments)
+
 
 
 # NOTE: segment start is assumed to end with "0000" string to overwrite
@@ -271,6 +281,8 @@ TF_SELECT_SOURCE_FONT=&Font
 TF_SELECT_FONTSIZE=&Size
 
 TF_FONT_SAMPLE_TEXT=This is the way text will look when displayed.
+
+
 
 TF_FONT_SAMPLE_TITLE=Sample Text
 
@@ -799,11 +811,11 @@ ABOUTDIALOG_VERSION=OmegaT version {0}
 ABOUTDIALOG_VERSION_UPDATE=OmegaT version {0}, update {1}
 
 ABOUTDIALOG_TITLE=About OmegaT
-ABOUTDIALOG_COPYRIGHT=Copyright \u00a9 2000-2007 Keith Godfrey, Maxym Mykhalchuk and others
+ABOUTDIALOG_COPYRIGHT=Copyright \u00a9 2000-2008 Keith Godfrey, Maxym Mykhalchuk and others
 
 ABOUTDIALOG_LICENSE_BUTTON=&License
 ABOUTDIALOG_CONTRIBUTORS=\
-    OmegaT is a free and open source multiplatform Computer Assisted Translation tool with fuzzy matching, translation memory, keyword search, glossaries, and translation leveraging into updated projects.\n\nOmegaT is the original work of Keith Godfrey.\nMarc Prior is the coordinator of the OmegaT project.\n\nCode has been contributed by\: \n  Zoltan Bartko\n  Didier Briel (release manager)\n  Kim Bruning\n  Alex Buloichik\n  Sandra Jean Chua \n  Martin Fleurke\n  Thomas Huriaux\n  Maxym Mykhalchuk \n  Henry Pijffers \n  Tiago Saboga\n  Benjamin Siband\n  Martin Wunderlich\n\nOther contributions are detailed in the readme.txt file\n\nOmegaT uses the following libraries\:\n  HTMLParser 1.6 by Somik Raha, Derrick Oswald and others (LGPL License).\n  MRJ Adapter 1.0.8 by Steve Roy (LGPL License).\n  VLDocking Framework 2.0.6d by VLSolutions (CeCILL License).\n  Hunspell 1.1.12 by L\u00E1szl\u00F3 N\u00E9meth and others (LGPL License).\n  JNA by Todd Fast, Timothy Wall and others (LGPL License).\n  Swing-Layout 1.0.2 (LGPL License).
+    OmegaT is a free and open source multiplatform Computer Assisted Translation tool with fuzzy matching, translation memory, keyword search, glossaries, and translation leveraging into updated projects.\n\nOmegaT is the original work of Keith Godfrey.\nMarc Prior is the coordinator of the OmegaT project.\n\nCode has been contributed by\: \nZoltan Bartko, Didier Briel (release manager), Kim Bruning, Alex Buloichik, Sandra Jean Chua, Martin Fleurke, Thomas Huriaux, Maxym Mykhalchuk, Henry Pijffers, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband and Martin Wunderlich\n\nOther contributions are detailed in the readme.txt file\n\nOmegaT uses the following libraries\:\n  HTMLParser 1.6 by Somik Raha, Derrick Oswald and others (LGPL License)\n  MRJ Adapter 1.0.8 by Steve Roy (LGPL License)\n  VLDocking Framework 2.0.6d by VLSolutions (CeCILL License)\n  Hunspell 1.1.12 by L\u00E1szl\u00F3 N\u00E9meth and others (LGPL License)\n  JNA by Todd Fast, Timothy Wall and others (LGPL License)\n  Swing-Layout 1.0.2 (LGPL License)\n  Backport-util-concurrent (Public Domain)\n  Retroweaver 2.0.1 (Retroweaver License)\n  Jmyspell 2.1.4 (LGPL License) 
 
 
 # LicenseDialog.java
